<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.udacity.caraher.emma.project1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.udacity.caraher.emma.project1.LocationEditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_label"
        custom:minLength="3"/>

    <ListPreference
        android:defaultValue="Celsius"
        android:entries="@array/pref_temp_units"
        android:entryValues="@array/pref_temp_values"
        android:key="@string/pref_unit_key"
        android:title="@string/pref_temp_title" />

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />

    <ListPreference
        android:defaultValue="https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_%s.png"
        android:entries="@array/pref_icon_options"
        android:entryValues="@array/pref_icon_values"
        android:key="@string/pref_art_pack_key"
        android:title="@string/pref_art_pack_label" />

</PreferenceScreen>
